--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-image: url('Assets/banner.png'); 
+    background-image: url('banner.png'); 
     background-size: cover;
     background-position: center;
     padding: 50px 0;
