--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,13 +7,15 @@ body {
 }
 
 header {
-    background-image: url('banner.png'); 
+    background-image: url('banner.png');
     background-size: cover;
     background-position: center;
-    padding: 50px 0;
+    height: 100vh; 
     text-align: center;
     position: relative;
     width: 100%;
+    margin: 0; 
+    padding: 0; 
 }
 
 header::before {
@@ -23,7 +25,7 @@ header::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .form-container {
