--- a/Assets/style.css
+++ b/Assets/style.css
@@ -10,12 +10,10 @@ header {
     background-image: url('banner.png');
     background-size: cover;
     background-position: center;
-    height: 100vh; 
+    padding: 50px 0;
     text-align: center;
     position: relative;
     width: 100%;
-    margin: 0; 
-    padding: 0; 
 }
 
 header::before {
@@ -26,6 +24,15 @@ header::before {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+    font-family: 'Playfair Display', serif;
+    color: #8b0000;
+    font-size: 3rem;
+    margin: 0;
+    position: relative;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .form-container {
