--- a/Assets/style.css
+++ b/Assets/style.css
@@ -19,7 +19,7 @@ header {
     background-image: url('banner.png');
     background-size: cover;
     background-position: center;
-    height: 100vh; /* Set height to fill the viewport */
+    padding: 50px 0;
     text-align: center;
     position: relative;
     width: 100%;
