--- a/Assets/style.css
+++ b/Assets/style.css
@@ -64,6 +64,10 @@ h1 {
     margin-right: 20px;
 }
 
+#movieForm {
+    padding-top: 20px;
+}
+
 #preview {
     flex: 1;
     background-color: #2c2c2c;
@@ -164,7 +168,7 @@ button:hover {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 40px auto; 
+    margin: 40px auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
