--- a/Assets/style.css
+++ b/Assets/style.css
@@ -19,10 +19,11 @@ header {
     background-image: url('banner.png');
     background-size: cover;
     background-position: center;
-    padding: 50px 0;
+    padding: 60px 0;
     text-align: center;
     position: relative;
     width: 100%;
+    margin: 0 0 30px 0;
 }
 
 header::before {
@@ -33,6 +34,7 @@ header::before {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 
 h1 {
@@ -42,6 +44,7 @@ h1 {
     margin: 0;
     position: relative;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .section {
